--- a/src/main/resources/templates/common/commonHeader.html
+++ b/src/main/resources/templates/common/commonHeader.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" th:href="@{/webjars/toastr/build/toastr.min.css}"/>
     <!-- 动画特性animate -->
     <link rel="stylesheet" th:href="@{/webjars/animate.css/animate.min.css}"/>
+    <!--jquery UI-->
+    <link rel="stylesheet" th:href="@{/webjars/jquery-ui/jquery-ui.min.css}"/>
+    <!--动画的js-->
+<!--    <link rel="stylesheet" th:href="@{/webjars/pace/themes/blue/pace-theme-barber-shop.css}"/>-->
     <!-- 动画特性animate -->
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="icon" th:href="@{/images/favicon.ico}">
