--- a/src/main/resources/templates/common/generator/templates/Service.java.vm
+++ b/src/main/resources/templates/common/generator/templates/Service.java.vm
@@ -1,10 +1,7 @@
 package ${package}.service;
 
 import com.tao.hai.base.BaseService;
-import ${package}.bean.${className};
-
-import java.util.List;
-import java.util.Map;
+import ${package}.bean.QuartzJob;
 
 /**
  * ${comments}
@@ -13,7 +10,7 @@ import java.util.Map;
  * @email ${email}
  * @date ${datetime}
  */
-public interface ${className}Service extends BaseService<${className}>  {
+public interface QuartzJobService extends BaseService<QuartzJob>  {
 	
-	${className} get(${pk.attrType} ${pk.humpAttrName});
+	QuartzJob get(${pk.attrType} ${pk.humpAttrName});
 }
